--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ html, body {
 
 	font-family: 'Gugi', cursive;
 }
+.menu-title {
+	width: 200px;
+    display: inline-block;
+}
 .menu-title a {
 	color: #333333;
 	text-decoration: none;
@@ -41,12 +45,27 @@ html, body {
 
 	height: 1.8rem;	
 }
+.menu form {
+	display: inline-block;
+
+	vertical-align: top;
+	margin-top: 0.3em;
+}
+.menu input {
+	height: 1.8em;
+}
+.menu input[type=text] {
+	width: calc(100vw - 1em - 200px - 100px - 5em);
+}
+.menu input[type=submit] {
+	width: 100px;
+}
 
 /**
  * Corps
  */
 .corps {
-	margin-top: 1.5em;
+	margin-top: 2em;
 }
 
 /**
