--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,51 @@ html, body {
 
 	background: #f7f8fa;
 }
+.center-title {
+	text-align: center;
+}
+
+/**
+ * Footer
+ */
+footer {
+	/* Couleurs et police */
+	background-color: #1D1D1D;
+	color: white;
+	border-top: 1px solid #828282;
+
+	/* Positionnements */
+	font-size: 0.7em;
+	width: 100%;
+	vertical-align: bottom;
+}
+footer table, footer table tr {
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+}
+footer a {
+	color: white;
+}
+
+/* Liens */
+.first-footer td {
+	min-width: 25%;
+	vertical-align: top;
+}
+.first-footer td ul {
+	list-style: none;
+}
+.first-footer a {
+	text-decoration: none;
+}
+.first-footer a:hover {
+	text-decoration: underline;
+}
+/* Copyright */
+.second-footer {
+	text-align: center;
+}
 
 /**
  * Menu
@@ -41,7 +86,7 @@ html, body {
 .menu-language {
 	position: absolute;
 	right: 2.2em;
-	top: 0.2rem;
+	top: 0.1rem;
 
 	height: 1.8rem;	
 }
@@ -60,12 +105,34 @@ html, body {
 .menu input[type=submit] {
 	width: 100px;
 }
+#selected-language {
+	display: none;
+}
 
 /**
  * Corps
  */
 .corps {
 	margin-top: 2em;
+}
+.center-corps {
+	width: 100%;
+	max-width: 800px;
+
+	margin: 0 auto;
+
+	padding-top: 1em;
+}
+.corps-flex {
+	display: flex;
+}
+.corps-half {
+	display: inline-block;
+
+	box-sizing: border-box;
+
+	width: 50%;
+	padding: 1em;
 }
 
 /**
@@ -122,4 +189,17 @@ html, body {
 	font-size: 1.2em;
 	text-align: center;
 	padding: 0.2em;
+}
+
+/**
+ * View
+ */
+.view-title1, .view-title2 {
+	text-align: center;
+}
+.view-title1 {
+	margin-bottom: 0;
+}
+.view-title2 {
+	margin-top: 0;
 }
