--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,6 +134,9 @@ footer a {
 	width: 50%;
 	padding: 1em;
 }
+.corps-ad {
+	text-align: center;
+}
 
 /**
  * Search Bar
@@ -202,4 +205,15 @@ footer a {
 }
 .view-title2 {
 	margin-top: 0;
+}
+
+/**
+ * Search
+ */
+.search-corps a {
+	color: #000000;
+	text-decoration: none;
+}
+.search-corps a:hover {
+	text-decoration: underline;
 }
