Added stripped table

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,9 +227,17 @@ footer a {
 }
 .corps-view table {
 	width: 100%;
+	border-collapse: collapse;
 }
 .corps-view td {
 	text-align: center;
+	padding: 0.3em 0;
+}
+.corps-view tr:nth-child(even), .corps-view th {
+	background-color: #e2e2e2;
+}
+.corps-view tr {
+	padding: 0.5em 0;
 }
 .corps-view th {
 	padding: 0.2em 0.5em;
