--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,15 @@ html, body {
 
 	background: #f7f8fa;
 }
+body {
+	position: relative;
+
+	box-sizing: border-box;
+
+	min-height: 100vh;
+
+	padding-bottom: 10em;
+}
 .center-title {
 	text-align: center;
 }
@@ -26,6 +35,10 @@ footer {
 	font-size: 0.7em;
 	width: 100%;
 	vertical-align: bottom;
+
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 footer table, footer table tr {
 	width: 100%;
