--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,6 +227,36 @@ footer a {
 }
 
 /**
+ * Drop file
+ **/
+#drop-overlay {
+    background: rgb(120,120,120);
+	background: rgba(0,0,0,0.4);
+
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+
+	color: white;
+	font-size: 2em;
+
+	text-align: center;
+
+	line-height: 100vh;
+	vertical-align: middle;
+
+	display: none;
+}
+
+#drop-overlay img {
+	position: fixed;
+	left: calc(50% - 64px);
+	top: calc(50% - 2em - 64px);
+}
+
+/**
  * Index
  */
 .index-search {
