--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,12 @@ footer a {
 	text-align: center;
 	margin: 1em 0;
 }
+#disclaimerMessage {
+	border: 1px solid #1D1D1D;
+
+	max-width: 750px;
+	margin: 0 auto;
+}
 
 /**
  * Search Bar
