Add alias CRUD to admin panel

--- a/Dysnomia.HowToOpenMe.AdminPanel/Views/Shared/_Layout.cshtml
+++ b/Dysnomia.HowToOpenMe.AdminPanel/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Alias" asp-action="Index">Alias</a></li>
                     <li><a asp-area="" asp-controller="Extensions" asp-action="Index">Extensions</a></li>
                     <li><a asp-area="" asp-controller="Softwares" asp-action="Index">Softwares</a></li>
                     <li><a asp-area="" asp-controller="ExtToSoft" asp-action="Index">ExtToSoft</a></li>
