--- a/Dysnomia.HowToOpenMe.AdminPanel/Views/Alias/Create.cshtml
+++ b/Dysnomia.HowToOpenMe.AdminPanel/Views/Alias/Create.cshtml
@@ -13,9 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Ext" class="control-label"></label>
-                <input asp-for="Ext" class="form-control" />
-                <span asp-validation-for="Ext" class="text-danger"></span>
+                <label asp-for="Ext" class="control-label"></label> <br />
+                <select name="Ext" asp-items="(SelectList) @ViewData["extensions"]"></select>
             </div>
             <div class="form-group">
                 <label asp-for="AliasExt" class="control-label"></label>
@@ -24,8 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ExtName" class="control-label"></label>
-                <input asp-for="ExtName" class="form-control" />
-                <span asp-validation-for="ExtName" class="text-danger"></span>
+                <select name="ExtName" asp-items="(SelectList) @ViewData["extensionsName"]"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
