--- a/Dysnomia.HowToOpenMe.WebApp/Views/Home/Index.cshtml
+++ b/Dysnomia.HowToOpenMe.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,68 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    @using Dysnomia.HowToOpenMe.Common.Models;
+    ViewData["Title"] = "Index";
+    var topExt = (IEnumerable<Extension>)ViewData["TopExt"];
+    var topSoft = (IEnumerable<Software>)ViewData["TopSoft"];
+
+    var culture = Context.Features.Get<IRequestCultureFeature>
+        ().RequestCulture.Culture.TwoLetterISOLanguageName;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="corps">
+    <div class="index-search">
+        <div class="search-bar">
+            <p class="index-text">@Localizer["HOME_MSG"]</p>
+            <input type="search" id="index-search-value" name="s" placeholder="@Localizer["SEARCH_PLACEHOLDER"]" value="@ViewData["SearchText"]">
+            <input type="submit" id="index-search-button" value="@Localizer["SEARCH"]">
+            @if (ViewData["error"] != null) {
+                <p class="index-error">@ViewData["error"]</p>
+            }
+        </div>
+    </div>
+
+    <partial name="_Ad" />
+
+    <section class="corps center-corps corps-flex ranks-corps">
+        <div class="corps-half">
+            <h2 class="center-title">
+                @Localizer["TOP_EXT"]
+            </h2>
+            <ol>
+                @foreach (var ext in topExt) {
+                    <li><a href="ext/@ext.Ext">@ext.Ext - @ext.Name</a></li>
+                }
+            </ol>
+        </div>
+        <div class="corps-half">
+            <h2 class="center-title">
+                @Localizer["TOP_SOFT"]
+            </h2>
+            <ol>
+                @foreach (var soft in topSoft) {
+                    <li><a href="ext/@soft.SmallName">@soft.SmallName - @soft.Name</a></li>
+                }
+            </ol>
+        </div>
+    </section>
+
+    <script>
+        window.onload = () => {
+            const sendForm = () => {
+                const value = document.getElementById('index-search-value').value;
+
+                if (value.length < 2) {
+                    return;
+                }
+
+                window.location.href = '/@culture/search/' + value
+            };
+
+            document.getElementById('index-search-button').addEventListener('click', sendForm);
+            document.getElementById('index-search-value').addEventListener('keyup', (e) => {
+                if (e.key === "Enter") {
+                    sendForm();
+                }
+            });
+        };
+    </script>
+</section>
