--- a/Dysnomia.HowToOpenMe.WebApp/Views/_ViewImports.cshtml
+++ b/Dysnomia.HowToOpenMe.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,13 @@
 ﻿@using Dysnomia.HowToOpenMe.WebApp
 @using Dysnomia.HowToOpenMe.WebApp.Models
+@using System
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+@{
+    var culture = Context.Features.Get<IRequestCultureFeature>
+        ().RequestCulture.Culture.TwoLetterISOLanguageName;
+}
