--- a/Dysnomia.HowToOpenMe.WebApp/wwwroot/css/style.css
+++ b/Dysnomia.HowToOpenMe.WebApp/wwwroot/css/style.css
@@ -4,54 +4,58 @@
 html, body {
 	padding: 0;
 	margin: 0;
-
 	font-family: 'Titillium Web', sans-serif;
-
 	background: #f7f8fa;
 }
+
 body {
 	position: relative;
-
 	box-sizing: border-box;
-
 	min-height: 100vh;
-
 	padding-bottom: 10em;
 }
+
 .center-title {
 	text-align: center;
 }
 
 /* SCROLLBAR CUSTOM */
 ::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
+	width: 4px;
+	height: 4px;
 }
+
 ::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
+	width: 0;
+	height: 0;
 }
+
 ::-webkit-scrollbar-thumb {
-  background: #3e3e3e;
-  border: 0 none #000000;
-  border-radius: 50px;
+	background: #3e3e3e;
+	border: 0 none #000000;
+	border-radius: 50px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #000000;
+	background: #000000;
 }
+
 ::-webkit-scrollbar-track {
-  background: #999999;
-  border: 0 none #000000;
-  border-radius: 50px;
+	background: #999999;
+	border: 0 none #000000;
+	border-radius: 50px;
 }
+
 ::-webkit-scrollbar-track:hover {
-  background: #999999;
+	background: #999999;
 }
+
 ::-webkit-scrollbar-track:active {
-  background: #DDDDDD;
+	background: #DDDDDD;
 }
+
 ::-webkit-scrollbar-corner {
-  background: transparent;
+	background: transparent;
 }
 
 /**
@@ -59,27 +63,26 @@ body {
  */
 footer {
 	box-sizing: border-box;
-
 	/* Couleurs et police */
 	background-color: #1D1D1D;
 	color: white;
 	border-top: 1px solid #828282;
-
 	/* Positionnements */
 	font-size: 0.7em;
 	width: 100%;
 	padding: 1em;
 	vertical-align: bottom;
-
 	position: absolute;
 	bottom: 0;
 	left: 0;
 }
+
 footer table, footer table tr {
 	width: 100%;
 	max-width: 960px;
 	margin: 0 auto;
 }
+
 footer a {
 	color: white;
 }
@@ -88,13 +91,16 @@ footer a {
 	min-width: 25%;
 	vertical-align: top;
 }
+
 .first-footer td ul {
 	list-style: none;
 	padding: 0;
 }
+
 .first-footer a {
 	text-decoration: none;
 }
+
 .first-footer a:hover {
 	text-decoration: underline;
 }
@@ -110,53 +116,52 @@ footer a {
 	position: fixed;
 	top: 0;
 	left: 0;
-
 	box-sizing: border-box;
-
 	width: 100%;
 	height: 2.2em;
-
 	padding: 0 1em;
-
 	background: #ecf0f1;
-
 	font-family: 'Gugi', cursive;
-
 	z-index: 10;
 }
+
 .menu-title {
 	width: 200px;
-    display: inline-block;
+	display: inline-block;
 }
+
 .menu-title a {
 	color: #333333;
 	text-decoration: none;
 	font-weight: bold;
-
 	font-size: 1.5em;
 }
+
 .menu-language {
 	position: absolute;
 	right: 0.3em;
 	top: 0.1rem;
-
-	height: 1.8rem;	
+	height: 1.8rem;
 }
+
 .menu form {
 	display: inline-block;
-
 	vertical-align: top;
 	margin-top: 0.3em;
 }
+
 .menu input {
 	height: 1.8em;
 }
+
 .menu input[type=text] {
 	width: calc(100vw - 1em - 200px - 100px - 5em);
 }
+
 .menu input[type=submit] {
 	width: 100px;
 }
+
 #selected-language {
 	display: none;
 }
@@ -167,47 +172,48 @@ footer a {
 .corps {
 	margin-top: 2em;
 }
+
 .center-corps {
 	width: 100%;
 	max-width: 850px;
-
 	margin: 0 auto;
-
-    padding: 1em;
-    box-sizing: border-box;
+	padding: 1em;
+	box-sizing: border-box;
 }
+
 @media (min-width: 750px) {
 	.corps-flex {
 		display: flex;
 	}
 }
+
 .corps-half {
 	display: inline-block;
-
 	box-sizing: border-box;
-	
 	padding: 1em;
 }
+
 @media (min-width: 750px) {
 	.corps-half {
 		width: 50%;
 	}
 }
+
 @media (max-width: 749px) {
 	.corps-half {
 		width: 100%;
 	}
 }
+
 .corps-ad {
 	text-align: center;
 	margin: 1em 0;
 }
+
 #disclaimerMessage {
 	border: 1px solid #1D1D1D;
-
 	max-width: 750px;
 	margin: 0 auto;
-
 	display: none;
 }
 
@@ -216,45 +222,37 @@ footer a {
  */
 .search-bar input {
 	box-sizing: border-box;
-
 	font-family: 'Titillium Web', sans-serif;
 }
+
 .search-bar input[type=text] {
 	padding-left: 1em;
 }
+
 .search-bar input[type=submit] {
 	background: #5599dd;
 	border: 0;
-
 	color: #ffffff;
 	text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-
-	box-shadow: 
-		inset 0 -1px 0 1px rgba(0, 0, 0, 0.1), 
-		inset 0 -10px 20px rgba(0, 0, 0, 0.1);
+	box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.1), inset 0 -10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /**
  * Drop file
  **/
 #drop-overlay {
-    background: rgb(120,120,120);
+	background: rgb(120,120,120);
 	background: rgba(0,0,0,0.4);
-
 	position: fixed;
 	left: 0;
 	top: 0;
 	right: 0;
 	bottom: 0;
-
 	color: white;
 	font-size: 2em;
-
 	text-align: center;
-
 	line-height: 100vh;
 	vertical-align: middle;
-
 	display: none;
 }
 
@@ -268,27 +266,31 @@ footer a {
  * Index
  */
 .index-search {
-	background: url('../img/background.jpg');
+	background: url(../img/background.jpg);
 	background-size: cover;
-
 	width: 100%;
-	height: 80vh;
+	height: 81vh;
 }
-.index-search form {
+
+.index-search .search-bar {
 	position: absolute;
 	top: calc(40vh - 11rem);
 	left: 10vw;
 }
+
 .index-search input {
 	height: 3rem;
 	font-size: 1.2rem;
 }
+
 .index-search input[type=search] {
 	width: calc(80vw - 120px);
 }
+
 .index-search input[type=submit] {
 	width: 120px;
 }
+
 .index-error {
 	background: rgb(200,45,45,1);
 	color: #dddddd;
@@ -296,6 +298,7 @@ footer a {
 	text-align: center;
 	padding: 0.2em;
 }
+
 .index-text {
 	text-align: center;
 	color: white;
@@ -321,52 +324,58 @@ footer a {
 .view-title1, .view-title2 {
 	text-align: center;
 }
+
 .view-title1 {
 	margin-bottom: 0;
 }
+
 .view-title2 {
 	margin-top: 0;
 }
+
 .corps-view {
 	padding: 1em 0;
 }
+
 .corps-view a {
 	color: #5192d3;
 	text-decoration: none;
 }
+
 .corps-view a:hover {
 	text-decoration: underline;
 }
+
 .corps-view table, .corps-view tr, .corps-view td, .corps-view th {
 	box-sizing: border-box;
 }
+
 .corps-view table {
 	max-width: 100%;
 	min-width: 800px;
-
 	margin: 0 auto;
-
 	border-collapse: collapse;
 }
+
 .corps-view td {
 	text-align: center;
 	padding: 0.3em 0;
 }
+
 .corps-view tr:nth-child(even), .corps-view th {
 	background-color: #e2e2e2;
-
-	border-width: 0.2em 0.5em; 
-	border-style: solid; 
+	border-width: 0.2em 0.5em;
+	border-style: solid;
 	border-color: #e2e2e2;
 }
+
 .corps-view th {
 	padding: 0.2em 0.5em;
 }
+
 .corps-view img {
 	box-sizing: border-box;
-	
 	width: 2em;
-
 	margin: 0 auto;
 	padding: 0.2em;
 }
@@ -377,10 +386,12 @@ footer a {
 .search-corps {
 	padding: 0 1em;
 }
+
 .ranks-corps a, .search-corps a {
 	color: #5192d3;
 	text-decoration: none;
 }
+
 .ranks-corps a:hover, .search-corps a:hover {
 	text-decoration: underline;
 }
