--- a/Dysnomia.HowToOpenMe.WebApp/Views/Home/Index.cshtml
+++ b/Dysnomia.HowToOpenMe.WebApp/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@{
-    @using Dysnomia.HowToOpenMe.Common.Models;
+﻿@using Dysnomia.HowToOpenMe.Common.Models;
+@{
     ViewData["Title"] = "Index";
     var topExt = (IEnumerable<Extension>)ViewData["TopExt"];
     var topSoft = (IEnumerable<Software>)ViewData["TopSoft"];
