--- a/Dysnomia.HowToOpenMe.WebApp/Views/Shared/_Layout.cshtml
+++ b/Dysnomia.HowToOpenMe.WebApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="menu">
-        <span class="menu-title"><a href="/">HowToOpen.me</a></span>
+        <span class="menu-title"><a href="/@culture/">HowToOpen.me</a></span>
 
         @if (ViewContext.RouteData.Values["action"].ToString() != "Index") {
             <form class="search-bar" method="get" action="/search">
