--- a/Dysnomia.HowToOpenMe.WebApp/Views/Home/Ext.cshtml
+++ b/Dysnomia.HowToOpenMe.WebApp/Views/Home/Ext.cshtml
@@ -5,7 +5,7 @@
     var result = (Extension)ViewData["Result"];
 
     IHtmlContent drawStatus(int value = 0) {
-        string retour = "<img src=\"/img/";
+        string retour = "<img alt=\"status\" src=\"/img/";
 
         switch (value) {
             case 0:
